fix cardd overflow issue on safari

--- a/src/app/new-nft-card/new-nft-card.component.scss
+++ b/src/app/new-nft-card/new-nft-card.component.scss
@@ -67,6 +67,7 @@
             background: var(--secondary);
             border-top-left-radius: 30px !important;
             border-top-right-radius: 30px !important;
+            position: relative;
             overflow: hidden;
             .card-img {
                 display: block;
